--- a/index.html
+++ b/index.html
@@ -8,17 +8,25 @@
 </head>
 
 <body>
+
+	<div class="toggle-container">
+		<input type="checkbox" id="toggle" name="toggle"/>
+		<label for="toggle" id="label">|☰|</label>
+	</div>
+
+
 	<h1>Score:
-		<span id="score"></span>
+		<span id="score">0</span>
 	</h1>
 
 	<h1>Chance: 
-		<span id="chance"></span>
+		<span id="chance">0</span>
 	</h1>
 
-	<h6>Highscrore (Player: Chance)   -------------->    
-		<span id="scoreRecord"></span>
-	</h6>
+	<h3>Highscrore (      
+		<span id="scoreRecord" ></span>
+		)
+	</h3>
 
 	<div class="grid">
 	</div>
